--- a/blockchain.topmonks.com/src/html/index.njk
+++ b/blockchain.topmonks.com/src/html/index.njk
@@ -362,13 +362,14 @@
           <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
             <h2>Our team</h2>
           </div>
-
+        </div>
+        <div class="mdc-layout-grid__inner">
           <div class="team-member mdc-layout-grid__cell mdc-layout-grid__cell--span-4-desktop">
-            {{ avatar("photo of Lea Petrášová", "avatar/lea-petrasova02.jpg", 92) }}
-            <h3>Lea Petrášová</h3>
-            <p>Blockchain & Crypto&nbsp;Projects</p>
-            <a href="https://www.linkedin.com/in/leapetras/"
-               title="Lea Petrášová on LinkedIn">
+            {{ avatar("photo of Linh Nguyen", "blockchain.topmonks.com/avatar/linh-nguyen.png", 92) }}
+            <h3>Linh Nguyen</h3>
+            <p>Risk assessment</p>
+            <a href="https://www.linkedin.com/in/linh-nguyen-3b76b522"
+               title="Linh Nguyen on LinkedIn">
               <svg width="35px" height="35px" viewBox="0 0 35 35" version="1.1" xmlns="http://www.w3.org/2000/svg"
                    xmlns:xlink="http://www.w3.org/1999/xlink">
                 <title>LinkedIn</title>
@@ -386,12 +387,62 @@
               </svg>
             </a>
           </div>
-
           <div class="team-member mdc-layout-grid__cell mdc-layout-grid__cell--span-4-desktop">
-            {{ avatar("photo of Lumír Mrkva", "avatar/mrkva-lumir.jpg", 92) }}
-            <h3>Lumír Mrkva</h3>
-            <p>Tech Lead</p>
-            <a href="https://github.com/lumir-mrkva" title="Lumír Mrkva on GitHub">
+            {{ avatar("photo of Jan Lopusek", "blockchain.topmonks.com/avatar/jan-lopusek.png", 92) }}
+            <h3>Jan Lopusek</h3>
+            <p>Net-worker</p>
+            <a href="https://www.linkedin.com/in/jan-lopusek"
+               title="Linh Nguyen on LinkedIn">
+              <svg width="35px" height="35px" viewBox="0 0 35 35" version="1.1" xmlns="http://www.w3.org/2000/svg"
+                   xmlns:xlink="http://www.w3.org/1999/xlink">
+                <title>LinkedIn</title>
+                <g stroke="none" stroke-width="1" fill="none" fill-rule="evenodd">
+                  <g transform="translate(-383.000000, -4098.000000)" fill="#1C1C37">
+                    <g transform="translate(0.000000, 3772.000000)">
+                      <g transform="translate(250.000000, 150.000000)">
+                        <path
+                          d="M144.01513,184.07304 C142.739075,184.084512 141.809629,184.952226 141.812062,186.129516 C141.814496,187.324535 142.824423,188.244395 144.097349,188.210848 C145.377923,188.177127 146.287032,187.311846 146.281991,186.131254 C146.276602,184.886 145.367841,184.060872 144.01513,184.07304 Z M142.146503,201.737074 L145.988051,201.737074 L145.988051,189.859887 L142.146503,189.859887 L142.146503,201.737074 Z M160.3431,201.737595 C160.3431,200.77793 160.359092,199.912649 160.339797,199.048411 C160.297384,197.141074 160.35127,195.22209 160.151197,193.330571 C159.965029,191.571676 158.981523,190.238469 157.195986,189.734389 C155.425745,189.234479 153.809861,189.506162 152.543019,190.983988 C152.468274,191.071072 152.362936,191.131735 152.225613,191.241938 C152.200582,190.723256 152.180245,190.300176 152.160255,189.884396 L148.27751,189.884396 L148.27751,201.716389 L152.197801,201.716389 L152.197801,200.807479 C152.197801,198.867116 152.18911,196.926926 152.201104,194.986737 C152.208926,193.72497 153.005222,192.801286 154.126919,192.710551 C155.388546,192.608344 156.05708,193.199857 156.289311,194.651088 C156.343892,194.992125 156.356234,195.342548 156.35745,195.6888 C156.364056,197.426314 156.35832,199.163828 156.362839,200.901343 C156.363534,201.176675 156.393954,201.452007 156.411336,201.737595 L160.3431,201.737595 Z M150.518471,176.000273 C160.296689,176.054331 168.064091,183.914863 167.999601,193.690901 C167.93685,203.246883 160.00049,211.043274 150.380279,210.999819 C140.749118,210.956364 132.889067,202.98702 133.001185,193.378893 C133.114171,183.6809 140.909733,175.947083 150.518471,176.000273 Z"
+                          id="Fill-1"></path>
+                      </g>
+                    </g>
+                  </g>
+                </g>
+              </svg>
+            </a>
+          </div>
+          <div class="team-member mdc-layout-grid__cell mdc-layout-grid__cell--span-4-desktop">
+            {{ avatar("photo of Jan Fiedler", "blockchain.topmonks.com/avatar/jan-fiedler.png", 92) }}
+            <h3>Jan Fiedler</h3>
+            <p>DeFi specialist</p>
+            <a href="https://twitter.com/FiedlerFamily" title="Jan Fiedler on Twitter">
+              <svg width="35px" height="35px" viewBox="0 0 32 32" version="1.1"
+                   xmlns="http://www.w3.org/2000/svg">
+                <title>Twitter Icon</title>
+                <g stroke="none" stroke-width="1" fill="none" fill-rule="evenodd">
+                  <g transform="translate(-1227.000000, -4927.000000)">
+                    <g transform="translate(0.000000, 4679.000000)">
+                      <g transform="translate(135.000000, 248.000000)">
+                        <g transform="translate(956.000000, 0.000000)">
+                          <g transform="translate(136.000000, 0.000000)">
+                            <circle fill="#1C1C37" cx="16" cy="16" r="16"></circle>
+                            <path
+                              d="M22.3125147,12.1875014 C21.8593891,12.3828141 21.3672011,12.5234393 20.8593879,12.5781269 C21.3828261,12.2656265 21.781264,11.7734384 21.9687643,11.1875002 C21.4843887,11.4765631 20.937513,11.6875008 20.3671999,11.7968759 C19.9062618,11.3046879 19.250011,11 18.5234477,11 C17.1250085,11 16.0000072,12.1328139 16.0000072,13.5234405 C16.0000072,13.7187532 16.0234447,13.914066 16.0625072,14.1015662 C13.9687547,13.9921911 12.101565,12.9921899 10.859376,11.460938 C10.6406258,11.8359385 10.5156256,12.2656265 10.5156256,12.7343771 C10.5156256,13.6093781 10.9609386,14.3828165 11.640627,14.8359421 C11.226564,14.8203171 10.8359385,14.7031294 10.5000006,14.5156292 L10.5000006,14.5468792 C10.5000006,15.7734432 11.3671891,16.7890694 12.5234405,17.0234447 C12.3125028,17.0781322 12.08594,17.1093823 11.8593772,17.1093823 C11.6953145,17.1093823 11.5390643,17.0937573 11.3828141,17.0703197 C11.703127,18.0703209 12.6328156,18.7968843 13.742192,18.8203218 C12.8750034,19.5000101 11.7890646,19.8984481 10.6093757,19.8984481 C10.398438,19.8984481 10.2031252,19.8906356 10,19.8671981 C11.1171888,20.5859489 12.4453154,21.0000119 13.8750046,21.0000119 C18.5156352,21.0000119 21.0547007,17.1562573 21.0547007,13.8203159 C21.0547007,13.7109407 21.0547007,13.6015656 21.0468882,13.4921905 C21.5390763,13.132815 21.9687643,12.687502 22.3125147,12.1875014 L22.3125147,12.1875014 Z"
+                              fill="#FFFFFF"></path>
+                          </g>
+                        </g>
+                      </g>
+                    </g>
+                  </g>
+                </g>
+              </svg>
+            </a>
+          </div>
+          <div class="team-member mdc-layout-grid__cell mdc-layout-grid__cell--span-4-desktop">
+            {{ avatar("photo of Jan Fabian", "blockchain.topmonks.com/avatar/_jan-fabian.png", 92) }}
+            <h3>Jan Fabian</h3>
+            <p>Developer</p>
+
+            <a href="https://github.com/janfabian" title="Jan Fabian on GitHub">
               <svg width="35px" height="36px" viewBox="0 0 35 36" version="1.1" xmlns="http://www.w3.org/2000/svg"
                    xmlns:xlink="http://www.w3.org/1999/xlink">
                 <title>GitHub Icon</title>
@@ -413,26 +464,44 @@
             </a>
           </div>
           <div class="team-member mdc-layout-grid__cell mdc-layout-grid__cell--span-4-desktop">
-            {{ avatar("photo of Josef Tětek", "avatar/josef-tetek.jpg", 92) }}
-            <h3>Josef Tětek</h3>
-            <p>Crypto Analyst</p>
+            {{ avatar("photo of Antonina Nesmelova", "blockchain.topmonks.com/avatar/antonina-nesmelova-.jpg", 92) }}
+            <h3>Antonina Nesmelova</h3>
+            <p>Developer</p>
 
-            <a href="https://twitter.com/KryptoJoseph" title="Josef Tětek on Twitter">
-              <svg width="35px" height="35px" viewBox="0 0 32 32" version="1.1"
-                   xmlns="http://www.w3.org/2000/svg">
-                <title>Twitter Icon</title>
+            <a href="https://www.linkedin.com/in/antonina-nesmelova-3a8365149/" title="Antonina Nesmelova on LinkedIn">
+              <svg width="35px" height="35px" viewBox="0 0 35 35" version="1.1" xmlns="http://www.w3.org/2000/svg"
+                   xmlns:xlink="http://www.w3.org/1999/xlink">
+                <title>LinkedIn</title>
                 <g stroke="none" stroke-width="1" fill="none" fill-rule="evenodd">
-                  <g transform="translate(-1227.000000, -4927.000000)">
-                    <g transform="translate(0.000000, 4679.000000)">
-                      <g transform="translate(135.000000, 248.000000)">
-                        <g transform="translate(956.000000, 0.000000)">
-                          <g transform="translate(136.000000, 0.000000)">
-                            <circle fill="#1C1C37" cx="16" cy="16" r="16"></circle>
-                            <path
-                              d="M22.3125147,12.1875014 C21.8593891,12.3828141 21.3672011,12.5234393 20.8593879,12.5781269 C21.3828261,12.2656265 21.781264,11.7734384 21.9687643,11.1875002 C21.4843887,11.4765631 20.937513,11.6875008 20.3671999,11.7968759 C19.9062618,11.3046879 19.250011,11 18.5234477,11 C17.1250085,11 16.0000072,12.1328139 16.0000072,13.5234405 C16.0000072,13.7187532 16.0234447,13.914066 16.0625072,14.1015662 C13.9687547,13.9921911 12.101565,12.9921899 10.859376,11.460938 C10.6406258,11.8359385 10.5156256,12.2656265 10.5156256,12.7343771 C10.5156256,13.6093781 10.9609386,14.3828165 11.640627,14.8359421 C11.226564,14.8203171 10.8359385,14.7031294 10.5000006,14.5156292 L10.5000006,14.5468792 C10.5000006,15.7734432 11.3671891,16.7890694 12.5234405,17.0234447 C12.3125028,17.0781322 12.08594,17.1093823 11.8593772,17.1093823 C11.6953145,17.1093823 11.5390643,17.0937573 11.3828141,17.0703197 C11.703127,18.0703209 12.6328156,18.7968843 13.742192,18.8203218 C12.8750034,19.5000101 11.7890646,19.8984481 10.6093757,19.8984481 C10.398438,19.8984481 10.2031252,19.8906356 10,19.8671981 C11.1171888,20.5859489 12.4453154,21.0000119 13.8750046,21.0000119 C18.5156352,21.0000119 21.0547007,17.1562573 21.0547007,13.8203159 C21.0547007,13.7109407 21.0547007,13.6015656 21.0468882,13.4921905 C21.5390763,13.132815 21.9687643,12.687502 22.3125147,12.1875014 L22.3125147,12.1875014 Z"
-                              fill="#FFFFFF"></path>
-                          </g>
-                        </g>
+                  <g transform="translate(-383.000000, -4098.000000)" fill="#1C1C37">
+                    <g transform="translate(0.000000, 3772.000000)">
+                      <g transform="translate(250.000000, 150.000000)">
+                        <path
+                          d="M144.01513,184.07304 C142.739075,184.084512 141.809629,184.952226 141.812062,186.129516 C141.814496,187.324535 142.824423,188.244395 144.097349,188.210848 C145.377923,188.177127 146.287032,187.311846 146.281991,186.131254 C146.276602,184.886 145.367841,184.060872 144.01513,184.07304 Z M142.146503,201.737074 L145.988051,201.737074 L145.988051,189.859887 L142.146503,189.859887 L142.146503,201.737074 Z M160.3431,201.737595 C160.3431,200.77793 160.359092,199.912649 160.339797,199.048411 C160.297384,197.141074 160.35127,195.22209 160.151197,193.330571 C159.965029,191.571676 158.981523,190.238469 157.195986,189.734389 C155.425745,189.234479 153.809861,189.506162 152.543019,190.983988 C152.468274,191.071072 152.362936,191.131735 152.225613,191.241938 C152.200582,190.723256 152.180245,190.300176 152.160255,189.884396 L148.27751,189.884396 L148.27751,201.716389 L152.197801,201.716389 L152.197801,200.807479 C152.197801,198.867116 152.18911,196.926926 152.201104,194.986737 C152.208926,193.72497 153.005222,192.801286 154.126919,192.710551 C155.388546,192.608344 156.05708,193.199857 156.289311,194.651088 C156.343892,194.992125 156.356234,195.342548 156.35745,195.6888 C156.364056,197.426314 156.35832,199.163828 156.362839,200.901343 C156.363534,201.176675 156.393954,201.452007 156.411336,201.737595 L160.3431,201.737595 Z M150.518471,176.000273 C160.296689,176.054331 168.064091,183.914863 167.999601,193.690901 C167.93685,203.246883 160.00049,211.043274 150.380279,210.999819 C140.749118,210.956364 132.889067,202.98702 133.001185,193.378893 C133.114171,183.6809 140.909733,175.947083 150.518471,176.000273 Z"
+                          id="Fill-1"></path>
+                      </g>
+                    </g>
+                  </g>
+                </g>
+              </svg>
+            </a>
+          </div>
+          <div class="team-member mdc-layout-grid__cell mdc-layout-grid__cell--span-4-desktop">
+            {{ avatar("photo of Radek Jakl", "blockchain.topmonks.com/avatar/radek-jakl", 92) }}
+            <h3>Radek Jakl</h3>
+            <p>Designer</p>
+
+            <a href="https://www.linkedin.com/in/jaklradek/" title="Radek Jakl on LinkedIn">
+              <svg width="35px" height="35px" viewBox="0 0 35 35" version="1.1" xmlns="http://www.w3.org/2000/svg"
+                   xmlns:xlink="http://www.w3.org/1999/xlink">
+                <title>LinkedIn</title>
+                <g stroke="none" stroke-width="1" fill="none" fill-rule="evenodd">
+                  <g transform="translate(-383.000000, -4098.000000)" fill="#1C1C37">
+                    <g transform="translate(0.000000, 3772.000000)">
+                      <g transform="translate(250.000000, 150.000000)">
+                        <path
+                          d="M144.01513,184.07304 C142.739075,184.084512 141.809629,184.952226 141.812062,186.129516 C141.814496,187.324535 142.824423,188.244395 144.097349,188.210848 C145.377923,188.177127 146.287032,187.311846 146.281991,186.131254 C146.276602,184.886 145.367841,184.060872 144.01513,184.07304 Z M142.146503,201.737074 L145.988051,201.737074 L145.988051,189.859887 L142.146503,189.859887 L142.146503,201.737074 Z M160.3431,201.737595 C160.3431,200.77793 160.359092,199.912649 160.339797,199.048411 C160.297384,197.141074 160.35127,195.22209 160.151197,193.330571 C159.965029,191.571676 158.981523,190.238469 157.195986,189.734389 C155.425745,189.234479 153.809861,189.506162 152.543019,190.983988 C152.468274,191.071072 152.362936,191.131735 152.225613,191.241938 C152.200582,190.723256 152.180245,190.300176 152.160255,189.884396 L148.27751,189.884396 L148.27751,201.716389 L152.197801,201.716389 L152.197801,200.807479 C152.197801,198.867116 152.18911,196.926926 152.201104,194.986737 C152.208926,193.72497 153.005222,192.801286 154.126919,192.710551 C155.388546,192.608344 156.05708,193.199857 156.289311,194.651088 C156.343892,194.992125 156.356234,195.342548 156.35745,195.6888 C156.364056,197.426314 156.35832,199.163828 156.362839,200.901343 C156.363534,201.176675 156.393954,201.452007 156.411336,201.737595 L160.3431,201.737595 Z M150.518471,176.000273 C160.296689,176.054331 168.064091,183.914863 167.999601,193.690901 C167.93685,203.246883 160.00049,211.043274 150.380279,210.999819 C140.749118,210.956364 132.889067,202.98702 133.001185,193.378893 C133.114171,183.6809 140.909733,175.947083 150.518471,176.000273 Z"
+                          id="Fill-1"></path>
                       </g>
                     </g>
                   </g>
