[www.hackercamp.cz] Update site

--- a/www.hackercamp.cz/src/html/index.njk
+++ b/www.hackercamp.cz/src/html/index.njk
@@ -14,7 +14,7 @@
   />
   <meta
     name="description"
-    content="Zažijte nultý ročník netradičního třídenního festivalu pro lidi z české tech scény. V duchu nekonference či barcampu se od sebe budeme vzájemně učit, bavit se a poznávat."
+    content="Zažijte první ročník netradičního třídenního festivalu pro lidi z české tech scény. V duchu nekonference či barcampu se od sebe budeme vzájemně učit, bavit se a poznávat."
   />
   <style>
     /* Font PT Mono: Copyright © ParaType, 2018. All rights reserved.*/
@@ -441,7 +441,7 @@
           <h2><small>Hack to the Future</small></h2>
         </hgroup>
         <p property="description">
-          Zažijte nultý ročník netradičního třídenního festivalu pro lidi
+          Zažij s námi netradiční třídenní festival pro lidi
           z&nbsp;české tech scény.
         </p>
         <p>1.&ndash;4. září 2022 na Sobeňáku</p>
@@ -536,14 +536,14 @@
       <p class="hc-text--gay">
         <strong
         ><em
-          >Technologie, workshopy, panelovky, code&nbsp;retreat, sport i&nbsp;relax a
-            večerní&nbsp;zábava</em
+          >Technologie, workshopy, panelovky, sport i&nbsp;relax a
+            večerní koncerty &amp; DJs</em
           ></strong
         >
       </p>
       <p>
-        V&nbsp;duchu nekonference či barcampu se od sebe budeme vzájemně
-        učit, bavit se a poznávat. Večer se vám postaráme o&nbsp;festivalový
+        V&nbsp;duchu nekonference či barcampu se od sebe vzájemně
+        učíme, bavíme se a poznáváme. Večer si užijeme&nbsp;festivalový
         program&nbsp;&ndash; s&nbsp;kapelami, dobrým pivem a vším, co
         k&nbsp;festivalům patří. Jaké si to uděláme, takové to&nbsp;bude.
       </p>
@@ -577,14 +577,13 @@
       class="hc-card hc-card--flat mdc-layout-grid__cell mdc-layout-grid__cell--span-6-desktop"
     >
       <p>
-        Blízko máme k&nbsp;těm, kteří mají v&nbsp;srdci kus hackera. Chtějí
-        zažít a sami postavit něco nového. Mají rádi a rádi se podílejí
-        například i&nbsp;na neziskových projektech. A&nbsp;hlavně se chtějí
-        konečně potkat fyzicky a něco nového se od sebe vzájemně naučit.
-        Každý účastník je zároveň tvůrcem programu. Proto zveme hlavně ty,
+        Každý účastník je zároveň
+        tvůrcem programu. Proto zveme hlavně ty,
         kdo se chtějí do programu společných tří dní zapojit.
       </p>
-    </div>
+      <p>Blízko máme k&nbsp;těm, kteří mají v&nbsp;srdci kus hackera. Chtějí
+        zažít a sami postavit něco nového.</p>
+     </div>
   </div>
 </section>
 <section id="pro-koho">
@@ -593,12 +592,12 @@
 <div class="hc-people-bg hc-people-section">
   <div class="hc-card">
     <p>
-      Můžeš přijet jako jednotlivec, nebo vyrazit s&nbsp;celým svým týmem a
-      tři dny v&nbsp;přírodě si užít společně.
+      Kdo jsou hackeři, se kterými se potkáš? Majitelé firem,
+      investoři, programátoři a dataři, NGOs, NPOs a další social justice
+      warriors, bio&nbsp;hacking nadšenci a otužilci&nbsp;&ndash; prostě lidi jako&nbsp;ty.
     </p>
     <p>
-      Máme už první potvrzené účastníky. Potkáte se například
-      s&nbsp;klukama a holkama z&nbsp;<span
+      Nultý ročník si užili holky a kluci například z&nbsp;<span
         property="organizer"
         typeof="Organization"
       ><a property="sameAs" href="https://apify.com/">Apify</a></span
@@ -642,11 +641,6 @@
         ></span
       >,
       <span property="attendee" typeof="Organization"
-      ><a property="sameAs" href="https://www.twisto.cz/"
-        >Twisto</a
-        ></span
-      >,
-      <span property="attendee" typeof="Organization"
       ><a property="sameAs" href="https://www.aimsapi.com/"
         >AIMS</a
         ></span
@@ -666,7 +660,7 @@
       >,
       <span property="attendee" typeof="Organization"
       ><a property="sameAs" href="https://www.prestoventures.com/">Presto Ventures</a></span
-      >, …a seznam pořád&nbsp;roste.
+      >.
     </p>
   </div>
 </div>
@@ -687,10 +681,15 @@
       <div
         class="hc-card hc-card--decorated mdc-layout-grid__cell mdc-layout-grid__cell--span-6-desktop"
       >
-        <p>
-          Můžeš přispět přednáškou, workshopem, v&nbsp;panelovce,
-          zorganizovat ranní výběh nebo turnaj ve fotbálku.
-        </p>
+        <p>Můžeš přispět přednáškou, workshopem, naštípat dřevo, přivést
+          legacy hrací konzoli, deskovku, zorganizovat ranní výběh nebo turnaj
+          v&nbsp;jakémkoliv sportu.</p>
+      </div>
+      <div
+        class="hc-card hc-card--decorated mdc-layout-grid__cell mdc-layout-grid__cell--span-6-desktop"
+      >
+        <p>Pokud zapadne, přivez svůj produkt&nbsp;&ndash; Rekola,
+          Hookamonk, meteoradar a podobně.</p>
       </div>
     </div>
   </section>
@@ -828,6 +827,7 @@
     <div class="hc-price-list__text">
       <p>Na akci neplánujeme vydělávat, zároveň ji chceme tvořit bez velkých
         komerčních sponzorů.</p>
+      <p>Do konce května 2022 si lístky můžou koupit jen hackeři, co s námi byli na nultém roičníku. Když v téhle lhůtě zvládnou i za vstup zaplatit, mají od nás garantované místo i pro jednoho svého hosta. Od června začneme se zvaním dalších hackerů.</p>
     </div>
     <div class="mdc-layout-grid__inner">
       <article
@@ -990,7 +990,7 @@
     <div class="hc-price-list__text">
       <p>Cena vstupenky obsahuje: vstup na camp (program), ubytování - chatky nebo stany, koncerty, další doprovodný
         program, snídaně každé ráno po dobu trvání campu.
-        Vstupenky jsou jednotné (platí po celou dobu trvání campu 2.-5. 9. 2021). Ceny jsou bez DPH.</p>
+        Vstupenky jsou jednotné (platí po celou dobu trvání campu 1.-4. 9. 2022). Ceny jsou bez DPH.</p>
     </div>
   </section>
 
@@ -1082,7 +1082,7 @@
       <div class="hc-card hc-card--decorated mdc-layout-grid__cell">
         Hacker Camp je z&nbsp;principu nekomerční akce. Svoji vlastní službu
         nebo produkt můžeš propagovat a nabízet jen pokud to obohatí
-        samotnou&nbsp;akci
+        samotnou&nbsp;akci #NoDirectSales #NoDirectHiring
       </div>
 
       <div
@@ -1104,10 +1104,9 @@
       class="hc-card hc-card--decorated mdc-layout-grid__cell mdc-layout-grid__cell--span-8-tablet"
     >
       <p>
-        Nápad na Hacker Camp vznikl v hlavě Kuby Balady (Apify). Náš core
-        organizační tým je složený z Páji (Czechitas), Kačky, Káji (Apify),
-        Irči, Jirky (Fenek), Jirky, Aleše (TopMonks) a Pavla (Elephant
-        Orchestra).
+        Nápad na Hacker Camp vznikl v hlavě Kuby Balady. Náš core
+        organizační tým je složený z Páji, Kačky, Káji,
+        Irči, Jirky, rarouše a Kosiho.
       </p>
     </div>
     <div
@@ -1122,10 +1121,9 @@
       class="hc-card hc-card--decorated mdc-layout-grid__cell mdc-layout-grid__cell--span-8-tablet"
     >
       <p>
-        Všem nám chybí fyzické akce a eventy a věříme, že právě v
-        netradičních set-upech a prostředích vznikají ty nejlepší nečekané
-        nápady. Už teď se na nultý ročník Hacker Campu i tebe a tvůj tým
-        těšíme!
+        Z nultého ročníku máme vyzkoušeno, že tenhle typ akce nám v Česku chyběl.
+        Víme, že v netradičních set-upech a prostředích vznikají ty
+        nejlepší nečekané nápady. Pojeďte si s námi užít první ročník Hacker Campu!
       </p>
     </div>
   </div>
@@ -1136,13 +1134,13 @@
     <a
       href="https://docs.google.com/forms/d/e/1FAIpQLScYlv1ginKjyss_66JmsOGNGZpahg27NDoAe2nNUXHd7H1eqQ/viewform"
       class="hc-cta"
-    >Zažij s námi nultý ročník Hacker Campu</a
+    >Zažij s námi první ročník Hacker Campu</a
     >
   </p>
 </section>
 
 <footer class="mdc-layout-grid">
-  <p style="text-align: center">© 2021 Hacker Camp</p>
+  <p style="text-align: center">© 2021-2022 Hacker Camp</p>
 </footer>
 
 <script type="module">
