[www.hackercamp.cz] No-index pages

--- a/www.hackercamp.cz/src/html/faq/index.njk
+++ b/www.hackercamp.cz/src/html/faq/index.njk
@@ -3,6 +3,7 @@
 <html lang="cs">
 <head>
   <meta charset="utf-8" />
+  <meta name="robots" content="noindex">
   <title>Často kladené dotazy na Hacker Camp</title>
   <link rel="preconnect" href="https://res.cloudinary.com" />
   <link rel="preconnect" href="https://www.googletagmanager.com" />
