--- a/www.hackercamp.cz/src/html/index.njk
+++ b/www.hackercamp.cz/src/html/index.njk
@@ -2,6 +2,7 @@
 <html lang="cs">
 <head>
   <meta charset="utf-8" />
+  <meta name="robots" content="noindex">
   <title>Hacker Camp</title>
   <link rel="preconnect" href="https://res.cloudinary.com" />
   <link rel="preconnect" href="https://www.googletagmanager.com" />
@@ -901,7 +902,7 @@
     <div class="hc-price-list__text">
       <p>Na akci neplánujeme vydělávat, zároveň ji chceme tvořit bez velkých
         komerčních sponzorů.</p>
-      <p>Do konce května 2022 si lístky můžou koupit jen hackeři, co s námi byli na nultém roičníku. Když v téhle lhůtě
+      <p>Do konce května 2022 si lístky můžou koupit jen hackeři, co s námi byli na nultém ročníku. Když v téhle lhůtě
         zvládnou i za vstup zaplatit, mají od nás garantované místo i pro jednoho svého hosta. Od června začneme se
         zvaním dalších hackerů.</p>
     </div>
