--- a/www.hackercamp.cz/src/html/pro-hackery/index.njk
+++ b/www.hackercamp.cz/src/html/pro-hackery/index.njk
@@ -2,6 +2,7 @@
 <html lang="cs">
 <head>
   <meta charset="utf-8"/>
+  <meta name="robots" content="noindex">
   <title>Hacker Zóna Hacker Campu</title>
   <link rel="preconnect" href="https://res.cloudinary.com"/>
   <link rel="preconnect" href="https://www.googletagmanager.com"/>
