[www.hackercamp.cz] Updated team photo

--- a/www.hackercamp.cz/src/html/index.njk
+++ b/www.hackercamp.cz/src/html/index.njk
@@ -1234,7 +1234,7 @@
     <div
       class="hc-card hc-card--picture hc-card--centered mdc-layout-grid__cell mdc-layout-grid__cell--span-12"
     >
-      {% set publicId = images["IMG_20210903_144120.jpg"]["public_id"] %}
+      {% set publicId = images["Photo_6553923_DJI_323_jpg_11359125_0_202164175016_photo_original.jpg"]["public_id"] %}
       <img
         class="responsive"
         loading="lazy"
