Fix header image src

--- a/www.hookamonk.com/src/html/v3/index.njk
+++ b/www.hookamonk.com/src/html/v3/index.njk
@@ -33,7 +33,7 @@
                alt="[photo] Hookamonk box product photo"
                width="600px"
                src="{{ "/hookamonk.com/img_header-7.png" | cloudinaryUrl(width=600) }}"
-               srcset="{{ "/hookamonk.com/img_header-.png" | cloudinaryUrl(width=600) }} 1x,
+               srcset="{{ "/hookamonk.com/img_header-7.png" | cloudinaryUrl(width=600) }} 1x,
                      {{ "/hookamonk.com/img_header-7.png" | cloudinaryUrl(width=600,dpr=1.5) }} 1.5x,
                      {{ "/hookamonk.com/img_header-7.png" | cloudinaryUrl(width=600,dpr=2) }} 2x"/>
         </div>
