--- a/www.hookamonk.com/src/html/v2/index.njk
+++ b/www.hookamonk.com/src/html/v2/index.njk
@@ -34,7 +34,7 @@
                alt="[photo] Hookamonk box product photo"
                width="600px"
                src="{{ "/hookamonk.com/img_header-7.png" | cloudinaryUrl(width=600) }}"
-               srcset="{{ "/hookamonk.com/img_header-.png" | cloudinaryUrl(width=600) }} 1x,
+               srcset="{{ "/hookamonk.com/img_header-7.png" | cloudinaryUrl(width=600) }} 1x,
                      {{ "/hookamonk.com/img_header-7.png" | cloudinaryUrl(width=600,dpr=1.5) }} 1.5x,
                      {{ "/hookamonk.com/img_header-7.png" | cloudinaryUrl(width=600,dpr=2) }} 2x" />
         </div>
@@ -65,14 +65,14 @@
             </svg>
           </div>
           <div class="wrap-collabsible">
-                <input id="collapsible1" class="toggle" type="checkbox"> 
+                <input id="collapsible1" class="toggle" type="checkbox">
                 <label for="collapsible1" class="lbl-toggle" tabindex="0">
                 <h3>Say goodbye to charcoals</h3></label>
                 <div class="collapsible-content"><div class="content-inner"><p>Warp is completely charcoal-less hookah. Tobacco is heated by spirals controlled by a smart electronic device. No more dirty jobs and bad smells at your place.</p>
              </div>
            </div>
           </div>
-          
+
         </div>
         <div class="hm-features__content mdc-layout-grid__cell mdc-layout-grid__cell--span-3-desktop card">
            <div class="material-icons material-icons--neutral">
@@ -82,7 +82,7 @@
             </svg>
           </div>
           <div class="wrap-collabsible">
-                <input id="collapsible2" class="toggle" type="checkbox"> 
+                <input id="collapsible2" class="toggle" type="checkbox">
                 <label for="collapsible2" class="lbl-toggle" tabindex="0">
                 <h3>Less staff needed</h3></label>
                 <div class="collapsible-content"><div class="content-inner"><p>You only need a shishaman to fill the bowl with tobacco. Warp does the rest and takes care of a pleasant smoking experience throughout the session, no other assistance needed.</p>
@@ -99,14 +99,14 @@
             </svg>
           </div>
           <div class="wrap-collabsible">
-                <input id="collapsible3" class="toggle" type="checkbox"> 
+                <input id="collapsible3" class="toggle" type="checkbox">
                 <label for="collapsible3" class="lbl-toggle" tabindex="0">
                 <h3>Pay per use</h3></label>
                 <div class="collapsible-content"><div class="content-inner"><p>You will pay us at the end of each month based on the number of sessions served. We earn when you earn. You earn, when your customers enjoy Warp sessions at your place. A truly win-win-win situation.</p>
              </div>
            </div>
           </div>
-          
+
         </div>
         <div class="hm-features__content mdc-layout-grid__cell mdc-layout-grid__cell--span-3-desktop card">
           <div class="material-icons material-icons--neutral">
@@ -116,14 +116,14 @@
             </svg>
           </div>
         <div class="wrap-collabsible">
-                <input id="collapsible4" class="toggle" type="checkbox"> 
+                <input id="collapsible4" class="toggle" type="checkbox">
                 <label for="collapsible4" class="lbl-toggle" tabindex="0">
                 <h3>First electronic hookah</h3></label>
                 <div class="collapsible-content"><div class="content-inner"><p>There is no e-liquid in Warp. You can use any tobacco you love and enjoy its clear taste.</p>
              </div>
            </div>
           </div>
-          
+
         </div>
 
         <div class="hm-features__content mdc-layout-grid__cell mdc-layout-grid__cell--span-3-desktop card">
@@ -134,16 +134,16 @@
             </svg>
           </div>
         <div class="wrap-collabsible">
-                <input id="collapsible5" class="toggle" type="checkbox"> 
+                <input id="collapsible5" class="toggle" type="checkbox">
                 <label for="collapsible5" class="lbl-toggle" tabindex="0">
                 <h3>Complete set provided</h3></label>
                 <div class="collapsible-content"><div class="content-inner"><p>Hookamonk consists of hooka box, computer and the electronic head with our patented shisha funnel and heat management system. No other stuff needed, you can enjoy your smoking session just 12 minutes after unpacking the device.</p>
              </div>
            </div>
           </div>
-          
+
         </div>
-        
+
         <div class="hm-features__content mdc-layout-grid__cell mdc-layout-grid__cell--span-3-desktop card">
            <div class="material-icons material-icons--neutral">
             <svg viewBox="0 0 24 24">
@@ -152,14 +152,14 @@
             </svg>
           </div>
          <div class="wrap-collabsible">
-                <input id="collapsible6" class="toggle" type="checkbox"> 
+                <input id="collapsible6" class="toggle" type="checkbox">
                 <label for="collapsible6" class="lbl-toggle" tabindex="0">
                 <h3>Lounge app</h3></label>
                 <div class="collapsible-content"><div class="content-inner"><p>The Lounge App helps the lounge staff to manage Warp devices. It features an overview of running table sessions, monitors sessions run time, maintenance status and allows remote control of all devices.</p>
              </div>
            </div>
           </div>
-          
+
         </div>
         <div class="hm-features__content mdc-layout-grid__cell mdc-layout-grid__cell--span-3-desktop card">
           <div class="material-icons material-icons--neutral">
@@ -169,7 +169,7 @@
             </svg>
           </div>
           <div class="wrap-collabsible">
-                <input id="collapsible7" class="toggle" type="checkbox"> 
+                <input id="collapsible7" class="toggle" type="checkbox">
                 <label for="collapsible7" class="lbl-toggle" tabindex="0">
                 <h3>Consistent and full taste</h3></label>
                 <div class="collapsible-content"><div class="content-inner"><p>With Warp, the taste of tobacco remains full and constant during the entire session. No extra tweaking needed and even hookah beginners can shine with a delicious hookah.</p>
@@ -186,7 +186,7 @@
             </svg>
           </div>
           <div class="wrap-collabsible">
-                <input id="collapsible8" class="toggle" type="checkbox"> 
+                <input id="collapsible8" class="toggle" type="checkbox">
                 <label for="collapsible8" class="lbl-toggle" tabindex="0">
                 <h3>No burnt furniture</h3></label>
                 <div class="collapsible-content"><div class="content-inner"><p>Charcoals can easily burn your precious club furniture. No more burn marks with Warp.</p>
@@ -204,7 +204,7 @@
             </svg>
           </div>
         <div class="wrap-collabsible">
-                <input id="collapsible9" class="toggle" type="checkbox"> 
+                <input id="collapsible9" class="toggle" type="checkbox">
                 <label for="collapsible9" class="lbl-toggle" tabindex="0">
                 <h3>Smart inhale detection</h3></label>
                 <div class="collapsible-content"><div class="content-inner"><p>Warp electronic head reacts to inhales. The tobacco heats up only when you breathe in, constantly maintaining the ideal temperature. No more unpleasant sessions caused by poor charcoal management.</p>
@@ -221,7 +221,7 @@
             </svg>
           </div>
         <div class="wrap-collabsible">
-                <input id="collapsible10" class="toggle" type="checkbox"> 
+                <input id="collapsible10" class="toggle" type="checkbox">
                 <label for="collapsible10" class="lbl-toggle" tabindex="0">
                 <h3>Intensity regulation</h3></label>
                 <div class="collapsible-content"><div class="content-inner"><p>Whether you like your hookah stronger or smoother, you can change its intensity on display or in your mobile app.</p>
@@ -238,7 +238,7 @@
             </svg>
           </div>
         <div class="wrap-collabsible">
-                <input id="collapsible11" class="toggle" type="checkbox"> 
+                <input id="collapsible11" class="toggle" type="checkbox">
                 <label for="collapsible11" class="lbl-toggle" tabindex="0">
                 <h3>Features updated automatically</h3></label>
                 <div class="collapsible-content"><div class="content-inner"><p>Warp is kept up to date thanks to its wi-fi connection. All our devices are updated automatically on a regular basis.</p>
@@ -255,7 +255,7 @@
             </svg>
           </div>
            <div class="wrap-collabsible">
-                <input id="collapsible12" class="toggle" type="checkbox"> 
+                <input id="collapsible12" class="toggle" type="checkbox">
                 <label for="collapsible12" class="lbl-toggle" tabindex="0">
                 <h3>Mobile app</h3></label>
                 <div class="collapsible-content"><div class="content-inner"><p>Mobile app for Android and iOS. You can use it to change the intensity of your hookah or create a diary with your sessions.</p>
